--- a/codex/1.html
+++ b/codex/1.html
@@ -100,7 +100,10 @@
         100% { transform: translate(0); }
     }
     .glitching { animation: glitch .12s infinite; }
-
+@keyframes fadeMystery {
+    from { opacity:0; }
+    to { opacity:1; }
+}
 </style>
 </head>
 
